@@ -23,21 +23,27 @@
  */
 package com.formkiq.stacks.dynamodb.folders;
 
-import com.formkiq.aws.dynamodb.DynamoDbConnectionBuilder;
+import com.formkiq.aws.dynamodb.DynamoDbAwsServiceRegistry;
 import com.formkiq.aws.dynamodb.DynamoDbService;
-import com.formkiq.aws.dynamodb.DynamoDbServiceImpl;
+import com.formkiq.aws.dynamodb.DynamoDbServiceExtension;
 import com.formkiq.aws.dynamodb.ID;
 import com.formkiq.aws.dynamodb.QueryResult;
 import com.formkiq.aws.dynamodb.builder.DynamoDbTypes;
 import com.formkiq.aws.dynamodb.folders.GetAllFolderAndFilesQuery;
 import com.formkiq.aws.dynamodb.folders.GetFolderFilesByNameQuery;
 import com.formkiq.aws.dynamodb.model.DocumentItem;
+import com.formkiq.aws.s3.S3AwsServiceRegistry;
+import com.formkiq.aws.s3.S3Service;
+import com.formkiq.aws.s3.S3ServiceExtension;
+import com.formkiq.module.lambdaservices.AwsServiceCacheBuilder;
 import com.formkiq.stacks.dynamodb.DocumentItemDynamoDb;
 import com.formkiq.stacks.dynamodb.DocumentService;
-import com.formkiq.stacks.dynamodb.DocumentServiceImpl;
-import com.formkiq.stacks.dynamodb.DocumentVersionServiceNoVersioning;
+import com.formkiq.stacks.dynamodb.DocumentServiceExtension;
+import com.formkiq.stacks.dynamodb.DocumentVersionService;
+import com.formkiq.stacks.dynamodb.DocumentVersionServiceExtension;
 import com.formkiq.testutils.aws.DynamoDbExtension;
-import com.formkiq.testutils.aws.DynamoDbTestServices;
+import com.formkiq.testutils.aws.TestEnvironment;
+import com.formkiq.testutils.aws.TestServices;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -70,10 +76,20 @@ public class GetAllFolderAndFilesQueryTest {
    */
   @BeforeAll
   public static void beforeAll() throws Exception {
-    DynamoDbConnectionBuilder dbc = DynamoDbTestServices.getDynamoDbConnection();
-    db = new DynamoDbServiceImpl(dbc, DOCUMENTS_TABLE);
-    service =
-        new DocumentServiceImpl(dbc, DOCUMENTS_TABLE, new DocumentVersionServiceNoVersioning());
+
+    var awsCredentialsProvider = TestEnvironment.createCredentials();
+    var environment = TestEnvironment.builder().build();
+    var awsServiceCache = new AwsServiceCacheBuilder(environment, TestServices.getEndpointMap(),
+        awsCredentialsProvider).addService(new DynamoDbAwsServiceRegistry())
+        .addService(new S3AwsServiceRegistry()).build();
+
+    awsServiceCache.register(DynamoDbService.class, new DynamoDbServiceExtension());
+    awsServiceCache.register(DocumentService.class, new DocumentServiceExtension());
+    awsServiceCache.register(DocumentVersionService.class, new DocumentVersionServiceExtension());
+    awsServiceCache.register(S3Service.class, new S3ServiceExtension());
+
+    db = awsServiceCache.getExtension(DynamoDbService.class);
+    service = awsServiceCache.getExtension(DocumentService.class);
   }
 
   private static String getPath(final Map<String, AttributeValue> item) {
@@ -126,7 +142,7 @@ public class GetAllFolderAndFilesQueryTest {
 
       // then
       assertEquals(1, result.items().size());
-      assertPath(result.items().get(0), "file", "test2.txt");
+      assertPath(result.items().getFirst(), "file", "test2.txt");
       assertTrue(result.hasLastEvaluatedKey());
 
       // when
@@ -134,7 +150,7 @@ public class GetAllFolderAndFilesQueryTest {
 
       // then
       assertEquals(1, result.items().size());
-      assertPath(result.items().get(0), "file", "test3.txt");
+      assertPath(result.items().getFirst(), "file", "test3.txt");
       assertTrue(result.hasLastEvaluatedKey());
 
       // when
@@ -142,7 +158,7 @@ public class GetAllFolderAndFilesQueryTest {
 
       // then
       assertEquals(1, result.items().size());
-      assertPath(result.items().get(0), "file", "test4.txt");
+      assertPath(result.items().getFirst(), "file", "test4.txt");
       assertFalse(result.hasLastEvaluatedKey());
     }
   }
